--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
   </div>
   <!-- End Tools -->
   <!-- Start Video -->
-  <div class="video padding-section">
+  <!-- <div class="video padding-section">
     <div class="container">
       <div class="video-container">
         <h2>Take a Quick Tour <span>Video</span></h2>
@@ -372,7 +372,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- End Video -->
   <!-- Start Customers -->
   <div class="customers padding-section">
