fix issues and modify css file

--- a/index.html
+++ b/index.html
@@ -585,6 +585,20 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide d-flex flex-wrap-nowrap" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="1000">
+              <img src="images/microsoft logo.png" alt="Microsoft" class="img-fluid">
+              <img src="images/LGE Logo.png" alt="LG" class="img-fluid">
+              <img src="images/Master Card logo.png" alt="Monday" class="img-fluid">
+              <img src="images/hopin-logo1.png" alt="PayPal" class="img-fluid">
+              <img src="images/slack-technologie.png" alt="Lattice" class="img-fluid">
+            </div>
+            <div class="carousel-item" data-delay='{"show":"3000", "hide":"5000"}'>
+              <img src="images/paypal-logo.png" alt="PayPal"  class="img-fluid">
+              <img src="images/Master Card logo.png" alt="Monday" class="img-fluid">
+              <img src="images/microsoft logo.png" alt="Microsoft" class="img-fluid">
+              <img src="images/slack-technologie.png" alt="Lattice" class="img-fluid">
+              <img src="images/LGE Logo.png" alt="Hopin" class="img-fluid">
+            </div>
+            <!-- <div class="carousel-item active" data-bs-interval="1000">
               <img src="images/microsoft logo.png" alt="Microsoft" class="col-xl-3 col-lg-3 col-md-4 col-6">
               <img src="images/LGE Logo.png" alt="LG" class="col-xl-3 col-lg-3 col-md-4 col-6">
               <img src="images/Master Card logo.png" alt="Monday" class="col-xl-3 col-lg-3 col-md-4 col-6">
@@ -625,7 +639,7 @@
               <img src="images/hopin-logo1.png" alt="Hopin" class="col-xl-3 col-lg-3 col-md-4 col-6">
               <img src="images/monday-logo.png" alt="Monday" width="250" class="col-xl-3 col-lg-3 col-md-4 col-6">
               <img src="images/Master Card logo.png" alt="Monday"  class="col-xl-3 col-lg-3 col-md-4 col-6">
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
